# my_pmpp

./: CMakeLists.txt  README.md  run.sh
chapter_02/: CMakeLists.txt  chapter02.md  vectorAdd.cu
chapter_03/: CMakeLists.txt  chapter03.md  colorToGrayscaleConversion.cu  imageBlur.cu  matMul.cu
chapter_04/: chapter04.md
chapter_05/: CMakeLists.txt  chapter05.md  matMulTiled.cu
chapter_06/: CMakeLists.txt  chapter06.md  matCopy.cu  matMulCornerTurning.cu  matMulThreadCoarse.cu  matTransposeReadCoalesced.cu  matTransposeSharedMemory.cu  matTransposeWriteCoalesced.cu
chapter_10/: CMakeLists.txt  chapter10.md  reduce.cu  reduceMultiBlocks.cu  reduceSharedMemory.cu  reduceThreadCoarse.cu  reduceUnroll.cu  reduceWarpPrimitives.cu
gemm/: CMakeLists.txt  main.cu  utils.h
gemm/cublas/: gemmCublas.cu
gemm/wmma/: gemmWmma.cu
utils/: CMakeLists.txt  lodepng.cpp
