add_executable(reduce reduce.cu)
add_executable(reduceSharedMemory reduceSharedMemory.cu)
add_executable(reduceMultiBlocks reduceMultiBlocks.cu)
add_executable(reduceThreadCoarse reduceThreadCoarse.cu)
add_executable(reduceUnroll reduceUnroll.cu)
add_executable(reduceWarpPrimitives reduceWarpPrimitives.cu)
